[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix = "0.13"
actix-web = "4.9.0"
tonic = "0.12.3"
prost = "0.13.5"
actix_async_handler = "0.1.0"
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
